--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="info_para">
           <p>
             <br>
-              Rosa is a microbiological researcher in a prominent microbiological laboratory. Many microbiological species are not studied enough, and some remain a mystery to us.  Rosa’s role is to discover and document some of these bacteria.  Rosa is particularly interested in bacterial protein that synthesize protein that taste like beef.  Her lab is coordinating with improbable beef, a new start up to study these organisms.  Lab across the country have had success synthesizing beef from algae, fungi and micro-organisms found on plant roots.  However, improbable beef is still in search of that bacteria that will provide the perfect taste.
+              Rosa is a microbiological researcher in a prominent microbiological laboratory. Many microbiological species are not studied enough, and some remain a mystery to us.  Rosa’s role is to discover and document some of these bacteria.  Rosa is particularly interested in bacterial protein that synthesize protein that taste like beef.  Her lab is coordinating with <b>Improbable Beef</b>, a new start up to study these organisms.  Lab across the country have had success synthesizing beef from algae, fungi and micro-organisms found on plant roots.  However, <b>Improbable Beef</b> is still in search of that bacteria that will provide the perfect taste.
               <br>
               <br>
               Rosa has a hypothesis that these bacteria could be found on the human body.  Human body has a thousand of different bacteria that live on it in different parts. Furthermore, the bacterial species could differ between different individuals even in the same location of the body.  Rosa has hypothesized that the ideal bacteria that can synthesize the synthetic beef lives in the belly button.
@@ -51,7 +51,7 @@
               The top 10 bacterial cultures can be found in the bar graph below.  Bacteria culture per sample can be accessed in the bubble chart and the number of belly wash frequency can be shown in the gauge chart below for an individual once their ID is selected.
               <br>
               <br>
-              Possibilities of identifying this perfect testing synthetic beef may become a reality through someone’s belly button!
+              So come explore this website, whether you are a candidate or a researcher.  Dive into the world of micro-organisms and you will find the unexplored world with endless potential. You may be surprized that the possibility of identifying this perfect testing synthetic beef may become a reality through someone’s belly button!
           </p>
         </div>
       </div>
@@ -66,13 +66,13 @@
       <div class="col-md-12" >
         <div id="gauge"></div>
       </div>
-    </div>
      <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
     </div>
   </div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
