--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class= "container">
         <div class="info_para">
           <p>
-            <br>
+            <h3><b>ABOUT THIS PAGE:</b></h3>
               Rosa is a microbiological researcher in a prominent microbiological laboratory. Many microbiological species are not studied enough, and some remain a mystery to us.  Rosa’s role is to discover and document some of these bacteria.  Rosa is particularly interested in bacterial protein that synthesize protein that taste like beef.  Her lab is coordinating with <b>Improbable Beef</b>, a new start up to study these organisms.  Lab across the country have had success synthesizing beef from algae, fungi and micro-organisms found on plant roots.  However, <b>Improbable Beef</b> is still in search of that bacteria that will provide the perfect taste.
               <br>
               <br>
@@ -53,6 +53,8 @@
               <br>
               So come explore this website, whether you are a candidate or a researcher.  Dive into the world of micro-organisms and you will find the unexplored world with endless potential. You may be surprized that the possibility of identifying this perfect testing synthetic beef may become a reality through someone’s belly button!
           </p>
+          <br>
+          <br>
         </div>
       </div>
       <div class="col-md-5">
@@ -63,7 +65,7 @@
           <div id="bubble"></div>
         </div>
       </div>-->
-      <div class="col-md-12" >
+      <div class="col-md-5" >
         <div id="gauge"></div>
       </div>
      <div class="row">
